RESOLVED FIXED64834
[chromium] LayerRendererChromium shouldn't be a friend of RenderSurfaceChromium
https://bugs.webkit.org/show_bug.cgi?id=64834
Summary [chromium] LayerRendererChromium shouldn't be a friend of RenderSurfaceChromium
James Robinson
Reported 2011-07-19 15:57:19 PDT
[chromium] LayerRendererChromium shouldn't be a friend of RenderSurfaceChromium
Attachments
Patch (23.62 KB, patch)
2011-07-19 16:02 PDT, James Robinson
kbr: review+
webkit.review.bot: commit-queue-
James Robinson
Comment 1 2011-07-19 16:02:37 PDT
James Robinson
Comment 2 2011-07-19 16:24:58 PDT
Miscellaneous small cleanup. I have some follow-up plans in this area that will be a lot more interesting.
Kenneth Russell
Comment 3 2011-07-19 16:50:01 PDT
Comment on attachment 101404 [details] Patch Looks fine to me.
WebKit Review Bot
Comment 4 2011-07-19 17:03:03 PDT
Comment on attachment 101404 [details] Patch Rejecting attachment 101404 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-01', '--port..." exit_code: 1 Last 500 characters of output: irectory Updating working directory Processing patch 101404 from bug 64834. ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/9209037
James Robinson
Comment 5 2011-07-19 17:07:34 PDT
I am not good at this new changelog format, I deleted the "Reviewed by " line :/.
James Robinson
Comment 6 2011-07-19 17:07:57 PDT
Note You need to log in before you can comment on or make changes to this bug.